Profiling nqueens